fix horizontal scroll issue

--- a/app/assets/stylesheets/layout/_boats.scss
+++ b/app/assets/stylesheets/layout/_boats.scss
@@ -52,7 +52,6 @@
   flex-direction: row;
   align-items: center;
   margin-bottom: 20px;
-  width: 100%;
 }
 .boat-image {
   width: 100%;
